Fix SCSS breakpoint overlap, gray scale ordering, and update sass

--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -40,7 +40,7 @@
 }
 
 @mixin desktop {
-  @include respond-above($breakpoint-lg) {
+  @include respond-above($breakpoint-xl + 1) {
     @content;
   }
 }
