--- a/assets/scss/pages/_utilities.scss
+++ b/assets/scss/pages/_utilities.scss
@@ -102,10 +102,6 @@
 // Section-Specific Overrides
 // --------------------------------------------------------------------------
 
-#who-we-are .text-muted {
-  color: $color-black;
-}
-
 #services .value-prop-box:hover i {
   color: $color-white;
 }
